--- a/task sm/index2.html
+++ b/task sm/index2.html
@@ -15,6 +15,7 @@
         </div>
         <div class="container">
             <img class="shoes" src="./assets/images/ayyaqabi.jpeg" alt="">
+            
             <div class="dol70">
             <h2 class="dollar">Lorem ipsum dolor sit.</h2>
             <p class="lorem1">Lorem.</p>
@@ -41,12 +42,12 @@
 
         </div>
         <div class="dow">
-        <div class="down">
-            <div class="foto1"><img src="./assets/images/ayyaqabi.jpeg" alt=""></div>
-            <div class="foto2"><img src="./assets/images/ayyaqabi.jpeg" alt=""></div>
-            <div class="foto3"><img src="./assets/images/ayyaqabi.jpeg" alt=""></div>
-            <div class="foto4"><img src="./assets/images/ayyaqabi.jpeg" alt=""></div>
-        </div>
+            <div class="down">
+                <div class="foto a"><img src="./assets/images/ayyaqabi.jpeg" alt=""></div>
+                <div class="foto b"><img src="./assets/images/ayyaqabi.jpeg" alt=""></div>
+                <div class="foto c"><img src="./assets/images/ayyaqabi.jpeg" alt=""></div>
+                <div class="foto d"><img src="./assets/images/ayyaqabi.jpeg" alt=""></div>
+            </div>
     </div>
 
          
